--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -66,6 +66,7 @@ body {
   margin-bottom: 56px;
   font-family: 'Manrope', sans-serif;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -154,7 +155,7 @@ body {
   z-index: 5;
 }
 
-.menu__list .menu__list-item:hover > .submenu {
+.menu__list .menu__list-item:hover>.submenu {
   opacity: 1;
   visibility: visible;
   transform: rotateX(0deg);
@@ -392,4 +393,344 @@ body {
 .footer__copyright {
   text-align: center;
   padding: 42px 0 41px;
+}
+
+
+
+
+
+
+
+/* ==============страница с каталогом================ */
+
+
+.shop {
+  padding: 120px 0 105px;
+}
+
+.shop__inner {
+  display: flex;
+}
+
+.shop__filters {
+  width: 370px;
+  margin-right: 30px;
+}
+
+.shop-content__inner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #ececec;
+}
+
+.shop-content__filter {
+  border: 1px solid #ececec;
+  padding: 20px 25px 20px 30px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.shop-content__filter-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.product-item {
+  max-width: 370px;
+    text-align: center;
+}
+
+.product-item__img-box {
+  position: relative;
+  height: 370px;
+  overflow: hidden;
+  margin-bottom: 25px;
+}
+
+.product-item__images {
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.product-item__link-box {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+  background-color: #fff;
+  width: 220px;
+  height: 50px;
+  margin: 0 auto;
+  border-radius: 22px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  transform: translateY(300%);
+  transition: all 0.3s;
+}
+
+.product-item__link {
+  color: #8d8d8d;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.product-item__title {
+  color: #29282d;
+  padding: 15px 0 20px;
+}
+
+.product-item__price {
+  display: flex;
+  justify-content: center;
+}
+
+.product-item__new-price {
+  padding: 0 12px;
+  color: #29282d;
+}
+
+.product-item__old-price {
+  padding: 0 12px;
+  text-decoration: line-through;
+}
+
+.product-item__content-box {
+  display: none;
+}
+
+
+
+
+
+
+
+
+/*========= single product========== */
+
+
+.top {
+}
+.top__container {
+}
+.container {
+}
+.top__title {
+}
+.title {
+}
+
+.product-page {
+  padding: 120px 0 0;
+}
+
+.product-one {
+}
+
+.product-one__inner {
+  display: flex;
+}
+
+.product-one__slide {
+  width: 730px;
+  margin-right: 70px;
+}
+
+.product-slide {
+  display: flex;
+}
+
+.slick-vertical .slick-slide {
+  height: 140px;
+  margin-bottom: 30px;
+}
+
+.product-slide__thumb {
+  width: 140px;
+  margin-right: 30px;
+}
+
+.product-slide__thumb-item {
+  margin-bottom: 30px;
+  width: 140px;
+  height: 140px;
+  cursor: pointer;
+}
+
+.product-slide__thumb-item img {
+  width: 140px;
+  height: 140px;
+  object-fit: cover;
+}
+
+.product-slide__big {
+  width: 560px;
+}
+
+.product-slide__big-item img{
+  width: 560px;
+  height: 650px;
+  object-fit: cover;
+}
+
+.product-one__content {
+  width: 370px;
+}
+
+.product-one__title {
+  margin-bottom: 20px;
+  /* color: $title; */
+  font-size: 20px;
+}
+
+.product-one__box {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+
+.product-one__price {
+  display: flex;
+  font-size: 18px;
+}
+
+.product-one__price-new {
+  color: #000;
+}
+
+.product-one__price-old {
+  padding-left: 15px;
+  text-decoration: line-through;
+}
+
+.product-one__item-star {
+}
+
+.star {
+}
+
+.product-one__item-text {
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 17px;
+}
+
+.product-one__item-text span {
+  display: block;
+  /* color: $title;
+  @extend %roboto-400; */
+  font-size: 18px;
+}
+
+.product-tabs {
+  padding-top: 110px;
+}
+
+.product-tabs__top {
+  border-bottom: 1px solid #f0f0f0;
+  margin-bottom: 40px;
+  /* @extend %roboto-400; */
+  font-size: 22px;
+}
+
+.product-tabs__top-item {
+  display: inline-block;
+  margin-bottom: 10px;
+  gap: 55px;
+}
+
+.product-tabs__top-item--active {
+  /* color: $title; */
+  position: relative;
+}
+
+.product-tabs__top-item--active::before {
+  content: '';
+  position: absolute;
+  bottom: -11px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 1px;
+  /* background-color: $accent; */
+}
+
+.product-tabs__content {
+}
+
+.product-tabs__content-item {
+  display: none;
+}
+
+.product-tabs__content-item--active {
+  display: block;
+}
+
+.comments {
+  margin-bottom: 40px;
+  display: flex;
+}
+
+.comments__img {
+  margin-right: 30px;
+  min-width: 71px;
+  height: 71px;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.comments__content {
+}
+
+.comments__content-top {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.comments__content-name {
+  /* color: $title; */
+  margin-right: 13px;
+  /* @extend %roboto-400; */
+}
+
+.related {
+  padding: 50px 0 120px;
+}
+
+.related__title {
+  margin-bottom: 50px;
+}
+
+.related__items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 30px;
+}
+
+.product-item {
+}
+
+.product-item__img-box {
+  height: auto;
+}
+
+.product-item__images {
+}
+
+.product-item__title {
+  padding: 5px 0;
+}
+
+.product-item__price {
+}
+
+.product-item__new-price {
+}
+
+.product-item__old-price {
 }
